2009-09-19  Mo DeJong  <mdejong@users.sourceforge.net>

        Checkin reworked Java regexp module.

	* Makefile.in: Remove build rules for sunlabs classes.
	* src/jacl/sunlabs/brazil/util/regexp/Regexp.java: Removed
	* src/jacl/sunlabs/brazil/util/regexp/Regsub.java: Removed
	* src/jacl/tcl/lang/Regex.java: Add regexp module that
	makes use of Java native regexp classes.
	* src/jacl/tcl/lang/RegexpCmd.java:
	* src/jacl/tcl/lang/RegsubCmd.java:
	* src/jacl/tcl/lang/TclRegexp.java:
	* src/jacl/tcl/lang/Util.java: Use new regexp module.
	* tests/tcl/RegexpCmd.test: Removed
	* tests/tcl/regexp.test: Update to Tcl 8.4 test cases.

2009-09-16  Mo DeJong  <mdejong@users.sourceforge.net>

	tcljava-15-reformatting-checkpoint-2009-09-16
	to mark state of the HEAD before reverting recent
	changes back to tcljava-14-branchpoint.

2009-05-26  Mo DeJong  <mdejong@users.sourceforge.net>

	Created CVS branch named tcljava-14-branch
	and tcljava-14-branchpoint for all future
	1.4.X releases.

2008-12-13  Mo DeJong  <mdejong@users.sourceforge.net>

        * configure: Regen.
        * tcljava.m4 (AC_GCC_BUGS): Check to see if passing
        -O2 -fno-strict-aliasing to gcc 4.X fixes a crash caused by
        incorrect code generation in the optimizer. This was causing
        a problem with storing a Tcl_Interp* in a jlong.
        * src/native/javaCmd.c (Tclblend_Init): Check that we can
        read a Tcl_Interp* back out of a jlong at runtime, so that
        a readable error is generated instead of a strange crash.
        [Bug 1932060, Patch 2424551]

2007-10-01  Mo DeJong  <mdejong@users.sourceforge.net>

        * Makefile.in: Remove swingempty.jar from dist rule.
        * extras/GuiShell/GuiShell.java: Reimplement
        GuiShell example so that it uses standard
        swing package names and makes use of new
        StdChannel.setOut() and StdChannel.setErr()
        APIs to redirect output. The GuiShell example
        now exists in the global package instead of